--- a/src/components/GameArea/GameArea.css
+++ b/src/components/GameArea/GameArea.css
@@ -1,139 +1,1 @@
-.game-area {
-  position: relative;
-  width: 100%;
-  height: calc(100% - 100px);
-}
-
-/* Player avatar styling */
-#player-avatar {
-  width: 85px;
-  position: absolute;
-  object-fit: contain;
-  left: 50%;
-  top: calc(50% + 0px);
-  transform: translate(-50%, -50%);
-  z-index: 10;
-}
-
-#player-name-display {
-  position: absolute;
-  left: 50%;
-  top: calc(50% + 30px);
-  transform: translate(-50%, 0);
-  font-size: 12px;
-  font-weight: bold;
-  text-align: center;
-  width: 100px;
-  z-index: 10;
-}
-
-/* Collision boxes (red areas) */
-.box-container {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  pointer-events: none;
-  z-index: 1;
-}
-
-.box {
-  position: absolute;
-  opacity: 70%;
-  background-color: red;
-  border: 2px solid black;
-  pointer-events: auto;
-}
-
-#box1 {
-  width: 220px;
-  height: 160px;
-  top: 215px;
-  left: 0px;
-}
-
-#box2 {
-  width: 260px;
-  height: 170px;
-  top: 275px;
-  left: 310px;
-}
-
-#box3 {
-  width: 270px;
-  height: 180px;
-  top: 215px;
-  left: 655px;
-}
-
-#box4 {
-  width: 240px;
-  height: 235px;
-  top: 215px;
-  right: 0px;
-}
-
-#box5 {
-  width: 1450px;
-  height: 90px;
-  top: 460px;
-  left: 0px;
-}
-
-/* Arrow controls */
-#arrow-buttons {
-  position: fixed;
-  bottom: 20px;
-  right: 80px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  gap: 5px;
-  z-index: 100;
-}
-
-#arrow-buttons div {
-  display: flex;
-  justify-content: space-between;
-  gap: 40px;
-}
-
-#arrow-buttons button {
-  background: none;
-  border: none;
-  padding: 0;
-  cursor: pointer;
-  width: 35px;
-  height: 31px;
-}
-
-#arrow-buttons img {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-  transition: transform 0.2s, filter 0.2s;
-}
-
-#arrow-buttons img:hover {
-  transform: scale(1.3);
-  filter: brightness(1.2);
-}
-
-/* Location styling */
-.location {
-  position: relative;
-  width: 100%;
-  height: 100%;
-}
-
-#player-wrapper {
-  display: inline-block;
-  text-align: center;
-}
-
-#player-name-display {
-  font-weight: bold;
-  font-family: Arial, sans-serif;
-}
+@import "tailwindcss";
