--- a/src/components/HomeScreen/HomeScreen.css
+++ b/src/components/HomeScreen/HomeScreen.css
@@ -1,1 +1,70 @@
-@import "tailwindcss";
+html, body, #root {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  padding: 20px;
+  border-radius: 10px;
+  background: transparent;
+  width: 100%;
+  max-width: 400px;
+  height: 100%;
+}
+
+.input-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0px;
+  width: 100%;
+}
+
+input#player-name {
+  width: 250px;
+  height: 40px;
+  font-size: 16px;
+  text-align: center;
+  border-radius: 10px;
+  border: 2px solid #ccc;
+  outline: none;
+}
+
+#start-game {
+  width: 150px;
+  cursor: pointer;
+  transition: transform 0.2s ease-in-out;
+  margin-top: 10px;
+}
+
+#start-game:hover {
+  transform: scale(1.1);
+}
+
+/* Popup alert */
+.name-alert-popup {
+  position: fixed;
+  top: 5%;
+  right: 5%;
+  background: rgba(255, 225, 0, 0.354);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border-radius: 12px;
+  padding: 12px 20px;
+  color: #000000;
+  font-weight: 600;
+  box-shadow: 0 8px 32px rgba(31, 38, 135, 0.37);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  font-size: 14px;
+  z-index: 9999;
+  opacity: 1;
+  user-select: none;
+  pointer-events: auto;
+}
