--- a/src/components/GameScreen/GameScreen.css
+++ b/src/components/GameScreen/GameScreen.css
@@ -166,7 +166,7 @@ body, button, .action-button, .info-icon, #popup, #popup-notification, .item-ico
     border-radius: 15px;
     box-shadow: 2px 2px 6px rgba(0,0,0,0.15);
     display: none;
-    white-space: pre-wrap;
+    white-space: pre-line;
     z-index: 999;
     max-width: 600px;
     color: #e5eb3e;
