--- a/src/components/HomeScreen/HomeScreen.css
+++ b/src/components/HomeScreen/HomeScreen.css
@@ -33,8 +33,13 @@ input#player-name {
   font-size: 16px;
   text-align: center;
   border-radius: 10px;
-  border: 2px solid #ccc;
+  border: 2px solid rgba(255, 255, 255, 0.2); /* Tambahkan border transparan */
+  background: rgba(255, 255, 255, 0.1); /* Tambahkan background transparan */
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1); /* Tambahkan efek box-shadow */
+  backdrop-filter: blur(5px); /* Tambahkan efek blur */
+  -webkit-backdrop-filter: blur(5px); /* Untuk browser Safari */
   outline: none;
+  color: rgb(0, 0, 0); /* Atur warna teks agar kontras dengan latar belakang */
 }
 
 #start-game {
